--- a/TnTComponents/Styles/TnTComponents/_input.scss
+++ b/TnTComponents/Styles/TnTComponents/_input.scss
@@ -15,8 +15,10 @@
         color: inherit;
         caret-color: inherit;
         padding-top: 0.2rem;
+        width: 100%;
         @extend .tnt-body-large;
     }
+
 
     select {
         min-width: 5rem;
@@ -24,6 +26,17 @@
 
         &:disabled {
             cursor: not-allowed;
+        }
+
+        option {
+            color: $tnt-color-on-surface;
+            background-color: $tnt-color-surface-variant;
+        }
+    }
+
+    &.tnt-select-placeholder {
+        select option:first-child {
+            color: color-mix(in srgb, $tnt-color-on-surface 50%, transparent);
         }
     }
 
@@ -130,6 +143,8 @@
 
 label.tnt-components:not(:has(input[type=checkbox])):not(:has(input[type=radio])) {
     position: relative;
+    width: 100%;
+    display: inline-block;
 
     span.tnt-label {
         position: absolute;
@@ -151,13 +166,13 @@ label.tnt-components:not(:has(input[type=checkbox])):not(:has(input[type=radio])
 
     &:focus-within, &:not(:has(input:placeholder-shown)), &:has(.tnt-input-placeholder) {
         span.tnt-label {
-            transform: translateY(-0.9rem) scale(0.75) translateX(-0.65rem);
+            transform: translateY(-0.8rem) scale(0.75) translateX(-0.65rem);
         }
     }
 
     &:has(span.tnt-filled) {
         span.tnt-label {
-            top: 0;
+            top: 1.1rem;
             left: 1.25rem;
         }
     }
@@ -169,7 +184,7 @@ label.tnt-components:not(:has(input[type=checkbox])):not(:has(input[type=radio])
         span.tnt-label {
             padding: 0 0.25rem;
             left: 1.25rem;
-            top: 0;
+            top: 1.1rem;
         }
 
         &:focus-within, &:not(:has(input:placeholder-shown)), &:has(.tnt-input-placeholder) {
@@ -210,6 +225,7 @@ label.tnt-components:has(input[type=checkbox]) {
     min-height: 1.25rem;
     user-select: none;
     margin: 0.5rem;
+    width: 100%;
 
     &:not(:has(input:disabled)) {
         cursor: pointer;
