Added navlink stylings

--- a/LiveTest/LiveTest/Components/Layout/MainLayout.razor
+++ b/LiveTest/LiveTest/Components/Layout/MainLayout.razor
@@ -26,6 +26,9 @@
         <TnTSideNavMenuLink Icon="MaterialIcon.Snooze" Href="/snackbar">
             Snackbar
         </TnTSideNavMenuLink>
+        <TnTSideNavMenuLink  Href="/navlinks">
+            Nav Links
+        </TnTSideNavMenuLink>
         <TnTSideNavMenuGroup Title="Group 1" Icon="MaterialIcon.Business">
             <TnTSideNavMenuLink Icon="MaterialIcon.Delete" Href="/datagrid">
                 Data Grid
