--- a/TnTComponents/Styles/TnTComponents/_anchor.scss
+++ b/TnTComponents/Styles/TnTComponents/_anchor.scss
@@ -1,3 +1,16 @@
 ﻿a.tnt-components {
     text-decoration: none;
+    min-height: 1rem;
+    cursor: pointer;
+    display: inline-block;
+    padding: 0.5rem;
+    margin: 0.1rem;
+
+    &:disabled {
+        cursor: not-allowed;
+    }
+
+    span.tnt-icon {
+        vertical-align: middle;
+    }
 }
