--- a/LiveTest/LiveTest.Client/Pages/Form.razor
+++ b/LiveTest/LiveTest.Client/Pages/Form.razor
@@ -7,3 +7,9 @@
 <br />
 <br />
 <LiveTest.Client.Components.FormTesting />
+
+<TnTComponents.TnTLabel Label="Upload">
+    <TnTComponents.TnTInputFile />
+</TnTComponents.TnTLabel>
+
+<TnTComponents.TnTInputFile />
