--- a/TnTComponents/Styles/TnTComponents/_buttons.scss
+++ b/TnTComponents/Styles/TnTComponents/_buttons.scss
@@ -1,6 +1,6 @@
 ﻿@use "sass:map";
 
-button[is=tnt-button] {
+button[is=tnt-button], input::file-selector-button {
     outline: none;
     appearance: none;
     border: none;
