Reworked file upload

--- a/LiveTest/LiveTest.Client/Pages/Form.razor
+++ b/LiveTest/LiveTest.Client/Pages/Form.razor
@@ -8,14 +8,4 @@
 <br />
 <LiveTest.Client.Components.FormTesting />
 
-<TnTComponents.TnTLabel Label="Upload" Appearance="TnTComponents.FormAppearance.Outlined">
-    <TnTComponents.TnTInputFile Appearance="TnTComponents.FormAppearance.Outlined" />
-</TnTComponents.TnTLabel>
-
-<TnTComponents.TnTInputFile Appearance="TnTComponents.FormAppearance.Outlined" />
-
-<TnTComponents.TnTLabel Label="Upload" Appearance="TnTComponents.FormAppearance.Filled">
-    <TnTComponents.TnTInputFile Appearance="TnTComponents.FormAppearance.Filled" />
-</TnTComponents.TnTLabel>
-
-<TnTComponents.TnTInputFile Appearance="TnTComponents.FormAppearance.Filled" />
+<LiveTest.Client.Components.UploadFileComponent @rendermode="InteractiveAuto" />
