Fixed nav links

--- a/TnTComponents/Layout/TnTSideNavMenuLink.razor
+++ b/TnTComponents/Layout/TnTSideNavMenuLink.razor
@@ -3,7 +3,7 @@
 @namespace TnTComponents
 
 <div @attributes="AdditionalAttributes" class="@CssClass" style="@CssStyle">
-    <TnTNavLink href="@Href" Match="@Match" StartIcon="Icon" Disabled="Disabled" ActiveBackgroundColor="ActiveBackgroundColor" Ripple="Ripple" @onclick:stopPropagation>
+    <TnTNavLink Href="@Href" Match="@Match" StartIcon="Icon" Disabled="Disabled" ActiveBackgroundColor="ActiveBackgroundColor" Ripple="Ripple" @onclick:stopPropagation>
         @ChildContent
     </TnTNavLink>
 </div>
