Fixes to side nav groups

--- a/TnTComponents/Core/TnTAccordion.razor
+++ b/TnTComponents/Core/TnTAccordion.razor
@@ -14,4 +14,4 @@
     </div>
 </tnt-accordion>
 
-<TnTPageScript Src="@($"./_content/TnTComponents/TnTAccordion.razor.js")" />
+<TnTPageScript Src="@JsModulePath" />
