--- a/TnTComponents/Layout/TnTSideNavMenuGroup.razor
+++ b/TnTComponents/Layout/TnTSideNavMenuGroup.razor
@@ -11,7 +11,9 @@
     </span>
 
     <div>
-        @ChildContent
+        <div>
+            @ChildContent
+        </div>
     </div>
 
 </tnt-side-nav-menu-group>
