--- a/TnTComponents/Styles/TnTComponents/_datagrid.scss
+++ b/TnTComponents/Styles/TnTComponents/_datagrid.scss
@@ -14,6 +14,8 @@
             background-color: $tnt-color-surface-container-highest;
             box-shadow: 0px 1px $tnt-color-outline;
             z-index: 3;
+            text-overflow: ellipsis;
+            white-space: nowrap;
 
             tr {
 
@@ -26,10 +28,23 @@
                     text-align: center;
                     @extend .tnt-title-medium;
 
+                    .tnt-resizeable {
+                        position: absolute;
+                        top: 0;
+                        right: 0;
+                        width: 5px;
+                        background-color: transparent;
+                        cursor: col-resize;
+                        border-right: 1px solid $tnt-color-outline;
+                    }
+
+                    .tnt-resizing {
+                        border-right: 2px solid $tnt-color-primary;
+                    }
 
                     &.tnt-sortable {
                         cursor: pointer;
-                        transition: 200ms ease-in-out;
+                        transition: color ease-in-out 200ms;
 
                         &:hover {
                             color: $tnt-color-primary;
