Fixed progress on button

--- a/LiveTest/LiveTest.Client/Components/ButtonsTesting.razor
+++ b/LiveTest/LiveTest.Client/Components/ButtonsTesting.razor
@@ -6,18 +6,18 @@
 
 <TnTImageButton Icon="@MaterialIcon.Gamepad" />
 
-<TnTComponents.TnTButton>
+<TnTComponents.TnTButton Disabled="true">
     @MaterialIcon.Search.Render()
     Button Text
     @MaterialIcon.Poll.Render()
 </TnTComponents.TnTButton>
 
-<TnTComponents.TnTButton Appearance="ButtonAppearance.Outlined">
+<TnTComponents.TnTButton Appearance="ButtonAppearance.Outlined" Disabled="true">
     Button Text
     <TnTProgressIndicator Appearance="ProgressAppearance.Ring"/>
 </TnTComponents.TnTButton>
 
-<TnTComponents.TnTButton Appearance="ButtonAppearance.Text">
+<TnTComponents.TnTButton Appearance="ButtonAppearance.Text" Disabled="true">
     Button Text
     <TnTProgressIndicator Appearance="ProgressAppearance.Linear"/>
 </TnTComponents.TnTButton>
