--- a/TnTComponents/Styles/TnTComponents/_buttons.scss
+++ b/TnTComponents/Styles/TnTComponents/_buttons.scss
@@ -13,6 +13,7 @@ button[is=tnt-button], input::file-selector-button {
     align-items: center;
     justify-content: center;
     vertical-align: bottom;
+    cursor: pointer;
 
     @extend .tnt-label-large;
 
