--- a/TnTComponents/Styles/TnTComponents/_input.scss
+++ b/TnTComponents/Styles/TnTComponents/_input.scss
@@ -8,7 +8,7 @@
     padding: 0.5rem 1rem;
     align-items: center;
     position: relative;
-    margin: 0.5rem;
+    margin: 0.5rem 0;
     vertical-align: middle;
 
     input, select {
@@ -183,7 +183,7 @@ label.tnt-components:not(:has(input[type=checkbox])):not(:has(input[type=radio])
 
     &:focus-within, &:not(:has(input:placeholder-shown)), &:has(.tnt-input-placeholder) {
         span.tnt-label {
-            transform: translateY(-0.8rem) scale(0.75) translateX(-0.65rem);
+            transform: translateY(-0.8rem) scale(0.75) translateX(-0.9rem);
         }
     }
 
