--- a/TnTComponents/Styles/TnTComponents/_buttons.scss
+++ b/TnTComponents/Styles/TnTComponents/_buttons.scss
@@ -1,7 +1,6 @@
 ﻿@use "sass:map";
 
 button[is=tnt-button], input::file-selector-button {
-    outline: none;
     appearance: none;
     border: none;
     user-select: none;
@@ -14,6 +13,10 @@ button[is=tnt-button], input::file-selector-button {
     justify-content: center;
     vertical-align: bottom;
     cursor: pointer;
+
+    &:not(:has(.tnt-outlined)) {
+        outline: none;
+    }
 
     @extend .tnt-label-large;
 
