--- a/TnTComponents/Styles/TnTComponents/_tabview.scss
+++ b/TnTComponents/Styles/TnTComponents/_tabview.scss
@@ -3,7 +3,7 @@
     width: 100%;
     margin-top: 0.5rem;
 
-    div:first-child {
+    & > div:first-child {
         display: block;
         vertical-align: bottom;
         position: relative;
@@ -76,5 +76,9 @@
                 height: 0.2rem;
             }
         }
+    }
+
+    tnt-tab-child {
+        margin-top: 1rem;
     }
 }
