Updated theme toggling

--- a/LiveTest/LiveTest/Components/App.razor
+++ b/LiveTest/LiveTest/Components/App.razor
@@ -17,7 +17,7 @@
 <body>
     <Routes />
     <script src="_framework/blazor.web.js"></script>
-    <TnTComponents.TnTDesignTheme IsDark="false"/>
+    <TnTComponents.TnTDesignTheme Theme="TnTComponents.Theme.System" />
 </body>
 
 </html>
