--- a/TnTComponents/Core/TnTThemeToggle.razor
+++ b/TnTComponents/Core/TnTThemeToggle.razor
@@ -2,7 +2,7 @@
 @namespace TnTComponents
 @using TnTComponents.Core
 <tnt-theme-toggle @attributes="AdditionalAttributes">
-    Toggle
+    Toggle Theme
 </tnt-theme-toggle>
 
 <TnTPageScript Src="@JsModulePath" />
