--- a/LiveTest/LiveTest/Components/Layout/MainLayout.razor
+++ b/LiveTest/LiveTest/Components/Layout/MainLayout.razor
@@ -77,7 +77,9 @@
                 </TnTSideNavMenuLink>
             </TnTSideNavMenuGroup>
         </TnTSideNavMenuGroup>
-
+        <TnTSideNavMenuLink Icon="MaterialIcon.ShoppingBasket" Href="/skeleton">
+            Skeleton
+        </TnTSideNavMenuLink>
     </TnTSideNav>
 
     <TnTBody>
