--- a/TnTComponents/Styles/style.scss
+++ b/TnTComponents/Styles/style.scss
@@ -16,6 +16,7 @@
 @import 'TnTComponents/_tabview.scss';
 @import 'TnTComponents/_accordion.scss';
 @import 'TnTComponents/_dialog.scss';
+@import 'TnTComponents/_skeleton.scss';
 @import 'TnTComponents/_snackbar.scss';
 @import 'TnTComponents/_datagrid.scss';
 @import 'Components/_datagrid.scss';
