Reworked scroll bar style

--- a/TnTComponents/Styles/style.scss
+++ b/TnTComponents/Styles/style.scss
@@ -30,5 +30,5 @@ body {
 }
 
 * {
-    scrollbar-color: $tnt-color-surface $tnt-color-surface-variant;
+    scrollbar-color: $tnt-color-on-surface-variant $tnt-color-surface-variant;
 }
