Testing with new theme and stream rendering

--- a/LiveTest/LiveTest.Client/Pages/Skeleton.razor
+++ b/LiveTest/LiveTest.Client/Pages/Skeleton.razor
@@ -1,4 +1,5 @@
 ﻿@page "/skeleton"
+@using LiveTest.Client.Components
 @using TnTComponents
 <h3>Skeleton</h3>
 
@@ -7,6 +8,8 @@
 <TnTSkeleton BackgroundColor="TnTColor.Primary" />
 <TnTSkeleton style="width:20rem; height:2rem;" />
 <TnTSkeleton Animated="false" />
+
+<StreamedComponent/>
 
 @code {
 
