Progress indicator updates

--- a/LiveTest/LiveTest.Client/Pages/Progress.razor
+++ b/LiveTest/LiveTest.Client/Pages/Progress.razor
@@ -12,3 +12,19 @@
 </h3>
 
 <LiveTest.Client.Components.ProgressWithSetPercentage />
+
+
+<TnTComponents.TnTProgressIndicator Appearance="TnTComponents.ProgressAppearance.Ring" Size="TnTComponents.Size.Smallest" />
+<br />
+
+<TnTComponents.TnTProgressIndicator Appearance="TnTComponents.ProgressAppearance.Ring" Size="TnTComponents.Size.Small" />
+<br />
+
+<TnTComponents.TnTProgressIndicator Appearance="TnTComponents.ProgressAppearance.Ring" Size="TnTComponents.Size.Medium" />
+<br />
+
+<TnTComponents.TnTProgressIndicator Appearance="TnTComponents.ProgressAppearance.Ring" Size="TnTComponents.Size.Large" />
+<br />
+
+<TnTComponents.TnTProgressIndicator Appearance="TnTComponents.ProgressAppearance.Ring" Size="TnTComponents.Size.Largest" ProgressColor="TnTComponents.TnTColor.Tertiary" />
+<br />
